--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             </button>
                           </h2>
                           <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">A website usability review is perfect for a DIY’er or if you’re on a tighter budget. As a recovering auditor, I have a high attention to detail. I will review your website from a usability perspective with a fine-toothed comb and provide a list of recommendations to elevate and enhance your website’s user experience. It’s up to you to put them in place. </div>
+                            <div class="accordion-body">A website usability review is perfect for a DIY’er or if you’re on a tighter budget. With a high attention to detail, I will review your website from a usability perspective and provide a list of recommendations to elevate and enhance your website’s user experience. It’s up to you to put the recommendations into action. </div>
                           </div>
                         </div>
                       </div>
@@ -122,7 +122,7 @@
                         Salt of the Earth Skin
                     </h3>
                     <h4>
-                        Website Usability Review and Marketing Material Design
+                        Website Usability Review, Redesign, and Marketing Material Design
                     </h4>
                     <a href="./salt-of-the-earth-skin.html" class="projectLink">View Project</a>
                 </div>
@@ -162,6 +162,23 @@
             </div>
             <div class="projectPhoto col-lg-6 col-md-6 col-sm-12">
                 <img src="./images/mndvs.svg"class="img-fluid">
+            </div>
+        </div>
+      </section>
+
+      <section class="project">
+        <div class="projectTitle container col-12">            
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <h3>
+                    WiKnow, A Wine Pairing App
+                </h3>
+                <h4>
+                    UX Design
+                </h4>
+                <a href="./wiknow.html" class="projectLink">View Project</a>
+            </div>
+            <div class="projectPhoto col-lg-6 col-md-6 col-sm-12">
+                <img src="./images/wiknow.svg"class="img-fluid">
             </div>
         </div>
       </section>
