--- a/work.html
+++ b/work.html
@@ -66,7 +66,7 @@
                     Salt of the Earth Skin
                 </h3>
                 <h4>
-                    Website Usability Review and Marketing Material Design
+                    Website Usability Review, Redesign, and Marketing Material Design
                 </h4>
                 <a href="./salt-of-the-earth-skin.html" class="projectLink">View Project</a>
             </div>
@@ -114,6 +114,22 @@
     </div>
   </section>
 
+  <section class="project">
+    <div class="projectTitle container col-12">            
+        <div class="col-lg-6 col-md-6 col-sm-12">
+            <h3>
+                WiKnow, A Wine Pairing App
+            </h3>
+            <h4>
+                UX Design
+            </h4>
+            <a href="./wiknow.html" class="projectLink">View Project</a>
+        </div>
+        <div class="projectPhoto col-lg-6 col-md-6 col-sm-12">
+            <img src="./images/wiknow.svg"class="img-fluid">
+        </div>
+    </div>
+  </section>
 
       <section>
         <div class="end contact container text-center">
