--- a/wiknow.html
+++ b/wiknow.html
@@ -11,7 +11,7 @@
 
             gtag('config', 'G-2KX89GV8HX');
         </script>
-        <title>About</title>
+        <title>Madison Porter Design</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,15 +28,15 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="./about.html" id="about">About</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="./contact.html" id="contact">Contact</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="./work.html" id="work">Work</a>
-                      </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="./about.html" id="about">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="./contact.html" id="contact">Contact</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="./work.html" id="work">Work</a>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -44,38 +44,28 @@
 
         <section>
           <div class="container col-12">
-            <h1 class="pageTitle">
-                About Madison
-            </h1>
+            <h5 class="pageTitle sectionTitle">
+                Project
+            </h5>
+        </div>
+        <div class="projectTitle container col-12">            
+          <div class="projectDetails col-lg-6 col-md-6 col-sm-12">
+              <h1>
+                  WiKnow, A Wine Pairing App
+              </h1>
+              <h4 class="subheading">
+                  UX Design
+              </h4>
+              <a href="./work.html" id="backtoWork"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+              </svg>   Back to Work</a>
+            </div>
           </div>
-          <hr>
           <div class="container col-12">
-            <div class="bio col-lg-6 col-md-6 col-sm-12">
-              <p>
-                  Madison is a user experience designer based in Coeur d'Alene, Idaho. She began her career at a Big 4 professional services firm where she served clients across a variety of industries including energy, consumer and industrial products, life sciences, and residential real estate. After dedicating seven years to accounting and consulting, gaining valuable experience and collaborating with inspiring colleagues, she couldn't shake the feeling that something was missing from her career. Madison has always had an interest photography, writing, and design, seeking a path that would combine those creative passions with her analytical background. 
-              </p>
-              <p>
-                  Enter UX/UI Design - a perfect combination of visual design, problem solving, collaboration, and project management. In September 2022, Madison said goodbye to the accounting world and enrolled in a UX/UI Design program where she expanded her skill set into many areas of the design process including user research, prototyping, interface design, and front-end development.
-              </p>
-              <p>
-                  As a designer, Madison loves clean lines and minimalist designs. She enjoys creating simple solutions to complex problems and has a passion for all things visual design. Highly adaptable, Madison takes each project with a fresh perspective, and her goal is to create a product that truly embodies each clients’ unique brand and values. 
-              </p>
-              <p>
-                With family ties to small business, Madison is passionate about supporting local creatives and entrepreneurs. She loves to support her local bookstore, market, boutiques, and beyond. Using her design skills, her goal is to assist small businesses create websites, marketing materials, and more that represent their authentic brand.
-              </p>
-              <p>
-                  When she is not designing, Madison can be found reading (or <a class="link" href="https://www.amazon.com/Zoes-Big-Adventure-Madison-Porter/dp/B0C2S4MYF1">writing</a>) a good book, hiking with her dog, Zoe, or cooking a meal for her family and friends. 
-              </p>
-              <p class="end">
-                  Madison is currently available for freelance work.
-              </p>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-12">
-              <img src="./images/porter_madison.jpg" class="headshot img-fluid">
-            </div>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1200" height="900" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FSKtwpuXPe7pscNC5L2JX5L%2FPortfolio%3Fpage-id%3D47%253A53%26type%3Ddesign%26node-id%3D84-387%26viewport%3D717%252C178%252C0.06%26t%3Dz3HBjQBNQNfEvGdu-1%26scaling%3Dcontain%26starting-point-node-id%3D84%253A387%26mode%3Ddesign" allowfullscreen></iframe>
           </div>
-      </section>
-
+        </section>
+      
         <div>
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
               <div class="col-med-4 d-flex align-items-center">
