updates to text throughout

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                   Enter UX/UI Design - a perfect combination of visual design, problem solving, collaboration, and project management. In September 2022, Madison said goodbye to the accounting world and enrolled in a UX/UI Design program where she expanded her skill set into many areas of the design process including user research, prototyping, interface design, and front-end development.
               </p>
               <p>
-                  As a designer, Madison loves clean lines and minimalist designs. She enjoys creating simple solutions to complex problems and has a passion for all things visual design. Highly adaptable, Madison takes each project with a fresh perspective, and her goal is to create a product that truly embodies each clients’ unique brand and values. 
+                  As a designer, Madison loves clean lines and minimalist designs. She enjoys creating simple solutions to complex problems and has a passion for all things related to visual design. Highly adaptable, Madison takes each project with a fresh perspective, and her goal is to create a product that truly embodies each clients’ unique brand and values. 
               </p>
               <p>
                 With family ties to small business, Madison is passionate about supporting local creatives and entrepreneurs. She loves to support her local bookstore, market, boutiques, and beyond. Using her design skills, her goal is to assist small businesses create websites, marketing materials, and more that represent their authentic brand.
