--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             </button>
                           </h2>
                           <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Where function meets beauty. I love creating simple solutions to complex problems and have a passion for all things visual design. My UX/UI design services range from user research to prototyping to interface design. Together, we can create a user-centered experience that is as aesthetically pleasing as it is functional.</div>
+                            <div class="accordion-body">Where function meets beauty: I love creating simple solutions to complex problems andd have a passion for all things related to visual design. My UX/UI design services range from user research and prototyping to interface design. Together, we can craft a user-centered experience that is as aesthetically pleasing as it is functional.</div>
                           </div>
                         </div>
                         <div class="accordion-item">
@@ -90,7 +90,7 @@
                             </button>
                           </h2>
                           <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">As a business owner, you may not have the time to put effort into your online presence or marketing materials. I help with the creative, so you can focus on providing your unique gifts to the world. The results are websites and marketing materials that truly embody your aesthetic and values.</div>
+                            <div class="accordion-body">As a business owner, you may find it challenging to dedicate time to enhancing your online presence and refining your marketing materials. I'm here to assist with the creative aspects, allowing you to focus on sharing your unique gifts with the world. The results are websites and marketing materials that truly embody your aesthetic and values.</div>
                           </div>
                         </div>
                         <div class="accordion-item">
@@ -100,7 +100,7 @@
                             </button>
                           </h2>
                           <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">A website usability review is perfect for a DIY’er or if you’re on a tighter budget. With a high attention to detail, I will review your website from a usability perspective and provide a list of recommendations to elevate and enhance your website’s user experience. It’s up to you to put the recommendations into action. </div>
+                            <div class="accordion-body">A website usability review is ideal for DIY enthusiasts or those working within a tighter budget. With a keen attention to detail, I will meticulously assess your website's usability and offer a comprehensive list of recommendations aimed at elevating and enhancing your website's user experience. It is your responsibility to implement these suggestions. </div>
                           </div>
                         </div>
                       </div>
@@ -162,23 +162,6 @@
             </div>
             <div class="projectPhoto col-lg-6 col-md-6 col-sm-12">
                 <img src="./images/mndvs.svg"class="img-fluid">
-            </div>
-        </div>
-      </section>
-
-      <section class="project">
-        <div class="projectTitle container col-12">            
-            <div class="col-lg-6 col-md-6 col-sm-12">
-                <h3>
-                    WiKnow, A Wine Pairing App
-                </h3>
-                <h4>
-                    UX Design
-                </h4>
-                <a href="./wiknow.html" class="projectLink">View Project</a>
-            </div>
-            <div class="projectPhoto col-lg-6 col-md-6 col-sm-12">
-                <img src="./images/wiknow.svg"class="img-fluid">
             </div>
         </div>
       </section>
