--- a/work.html
+++ b/work.html
@@ -51,7 +51,7 @@
           <div class="container col-12">
             <div class="bio col-lg-6 col-md-6 col-sm-12">
               <p class="end">
-                My goal with each project is to create a product that truly embodies my clients' unique aesthetic and values. I approach each project with a fresh perspective, inspired by their story and the opportunity to partner with such talented business owners. Take a closer look at some of my recent work and the process behind the beautiful results. 
+                My goal with each project is to create a product that genuinely embodies my clients' unique aesthetic and values. I approach each project with a fresh perspective, drawing inspiration from their story and the opportunity to collaborate with such talented business owners. Take a closer look at my recent work and the process behind the beautiful results. 
               </p>
             </div>
           </div>
