--- a/work.html
+++ b/work.html
@@ -118,6 +118,23 @@
     <div class="projectTitle container col-12">            
         <div class="col-lg-6 col-md-6 col-sm-12">
             <h3>
+                Diaspora, A Small Art Gallery
+            </h3>
+            <h4>
+                UX/UI Design
+            </h4>
+            <a href="./diaspora.html" class="projectLink">View Project</a>
+        </div>
+        <div class="projectPhoto col-lg-6 col-md-6 col-sm-12">
+            <img src="./images/diaspora.svg"class="img-fluid">
+        </div>
+    </div>
+  </section>
+
+  <section class="project">
+    <div class="projectTitle container col-12">            
+        <div class="col-lg-6 col-md-6 col-sm-12">
+            <h3>
                 WiKnow, A Wine Pairing App
             </h3>
             <h4>
