update image css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lora:ital@0;1&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet" type="text/css">
-    </head>
+        
+      </head>
 
     <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary customNav sticky-top">
@@ -121,13 +122,13 @@
                     <h3>
                         Salt of the Earth Skin
                     </h3>
-                    <h4>
+                    <h4 class="subtitle">
                         Website Usability Review, Redesign, and Marketing Material Design
                     </h4>
                     <a href="./salt-of-the-earth-skin.html" class="projectLink">View Project</a>
                 </div>
                 <div class="projectPhoto col-lg-6 col-md-6 col-sm-12">
-                    <img src="./images/salt.svg" class="img-fluid">
+                    <img src="./images/salt.svg" class="projectImage img-fluid" alt="Responsive SVG">
                 </div>
             </div>
           </section>
@@ -144,7 +145,7 @@
                   <a href="./southwest-metro-animal-rescue.html" class="projectLink">View Project</a>
               </div>
               <div class="projectPhoto col-lg-6 col-md-6 col-sm-12">
-                  <img src="./images/swmar.svg"class="img-fluid">
+                  <img src="./images/swmar.svg"class="projectImage img-fluid">
               </div>
           </div>
         </section>
@@ -161,7 +162,7 @@
                 <a href="./minnesota-driver-vehicle-services.html" class="projectLink">View Project</a>
             </div>
             <div class="projectPhoto col-lg-6 col-md-6 col-sm-12">
-                <img src="./images/mndvs.svg"class="img-fluid">
+                <img src="./images/mndvs.svg"class="projectImage img-fluid">
             </div>
         </div>
       </section>
