--- a/work.html
+++ b/work.html
@@ -65,13 +65,13 @@
                 <h3>
                     Salt of the Earth Skin
                 </h3>
-                <h4>
+                <h4 class="subtitle">
                     Website Usability Review, Redesign, and Marketing Material Design
                 </h4>
                 <a href="./salt-of-the-earth-skin.html" class="projectLink">View Project</a>
             </div>
             <div class="projectPhoto col-lg-6 col-md-6 col-sm-12">
-                <img src="./images/salt.svg" class="img-fluid">
+                <img src="./images/salt.svg" class="projectImage img-fluid">
             </div>
         </div>
       </section>
@@ -90,7 +90,7 @@
               <a href="./southwest-metro-animal-rescue.html" class="projectLink">View Project</a>
           </div>
           <div class="projectPhoto col-lg-6 col-md-6 col-sm-12">
-              <img src="./images/swmar.svg"class="img-fluid">
+              <img src="./images/swmar.svg"class="projectImage img-fluid">
           </div>
       </div>
     </section>
@@ -109,7 +109,7 @@
             <a href="./minnesota-driver-vehicle-services.html" class="projectLink">View Project</a>
         </div>
         <div class="projectPhoto col-lg-6 col-md-6 col-sm-12">
-            <img src="./images/mndvs.svg"class="img-fluid">
+            <img src="./images/mndvs.svg"class="projectImage img-fluid">
         </div>
     </div>
   </section>
@@ -126,7 +126,7 @@
             <a href="./diaspora.html" class="projectLink">View Project</a>
         </div>
         <div class="projectPhoto col-lg-6 col-md-6 col-sm-12">
-            <img src="./images/diaspora.svg"class="img-fluid">
+            <img src="./images/diaspora.svg"class="projectImage img-fluid">
         </div>
     </div>
   </section>
@@ -143,7 +143,7 @@
             <a href="./wiknow.html" class="projectLink">View Project</a>
         </div>
         <div class="projectPhoto col-lg-6 col-md-6 col-sm-12">
-            <img src="./images/wiknow.svg"class="img-fluid">
+            <img src="./images/wiknow.svg"class="projectImage img-fluid">
         </div>
     </div>
   </section>
