--- a/abundo-wealth.html
+++ b/abundo-wealth.html
@@ -11,7 +11,7 @@
 
             gtag('config', 'G-2KX89GV8HX');
         </script>
-        <title>Salt of the Earth Skin - Madison Porter Design</title>
+        <title>Abundo Wealth - Madison Porter Design</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,16 +46,16 @@
          <div class="projectTitle container col-12">            
             <div class="projectDetails col-lg-6 col-md-6 col-sm-12">
                 <h1 class="pageTitle">
-                    Salt of the Earth Skin
+                    Abundo Wealth
                 </h1>
                 <h2>
-                  Website Usability Review
+                  YouVest Website Application Design
                 </h2>
               </div>
           </div>
           <hr class="container">
           <div class="container col-12">
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1200" height="900" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F81I6BK2EWTwk028LchmC4c%2FSalt-of-the-Earth-Skin%3Fpage-id%3D53%253A1254%26type%3Ddesign%26node-id%3D321-273%26viewport%3D366%252C-1433%252C0.13%26t%3Dv9USs0z2LBrveoVa-1%26scaling%3Dcontain%26starting-point-node-id%3D321%253A273%26mode%3Ddesign" allowfullscreen></iframe>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1200" height="900" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FsfVG4Vy4mdcHoKhU0hRbUj%2FAbundo_YouVest%3Fpage-id%3D524%253A4942%26type%3Ddesign%26node-id%3D524-4943%26viewport%3D2843%252C352%252C0.25%26t%3DajrR10EXpMNONmHy-1%26scaling%3Dcontain%26starting-point-node-id%3D524%253A4943%26mode%3Ddesign" allowfullscreen></iframe>
           </div>
         </section>
        
