--- a/about.html
+++ b/about.html
@@ -20,27 +20,27 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary customNav sticky-top">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html">Madison Porter Design</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="./about.html" id="about">About</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="./contact.html" id="contact">Contact</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" href="./work.html" id="work">Work</a>
-                      </li>
-                </ul>
-              </div>
-            </div>
-        </nav>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary customNav sticky-top">
+        <div class="container">
+          <a class="navbar-brand" href="./index.html">Madison Porter</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" href="./about.html" id="about">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="./contact.html" id="contact">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="https://www.linkedin.com/in/madison-porter-06711074/" id="work">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
         <section>
           <div class="container col-12">
@@ -48,26 +48,11 @@
                 About Madison
             </h1>
           </div>
-          <hr>
+          <hr class="container">
           <div class="container col-12">
             <div class="bio col-lg-6 col-md-6 col-sm-12">
               <p>
-                  Madison is a user experience designer based in Coeur d'Alene, Idaho. She began her career at a Big 4 professional services firm where she served clients across a variety of industries including energy, consumer and industrial products, life sciences, and residential real estate. After dedicating seven years to accounting and consulting, gaining valuable experience and collaborating with inspiring colleagues, she couldn't shake the feeling that something was missing from her career. Madison has always had an interest photography, writing, and design, seeking a path that would combine those creative passions with her analytical background. 
-              </p>
-              <p>
-                  Enter UX/UI Design - a perfect combination of visual design, problem solving, collaboration, and project management. In September 2022, Madison said goodbye to the accounting world and enrolled in a UX/UI Design program where she expanded her skill set into many areas of the design process including user research, prototyping, interface design, and front-end development.
-              </p>
-              <p>
-                  As a designer, Madison loves clean lines and minimalist designs. She enjoys creating simple solutions to complex problems and has a passion for all things related to visual design. Highly adaptable, Madison takes each project with a fresh perspective, and her goal is to create a product that truly embodies each clients’ unique brand and values. 
-              </p>
-              <p>
-                With family ties to small business, Madison is passionate about supporting local creatives and entrepreneurs. She loves to support her local bookstore, market, boutiques, and beyond. Using her design skills, her goal is to assist small businesses create websites, marketing materials, and more that represent their authentic brand.
-              </p>
-              <p>
-                  When she is not designing, Madison can be found reading (or <a class="link" href="https://www.amazon.com/Zoes-Big-Adventure-Madison-Porter/dp/B0C2S4MYF1">writing</a>) a good book, hiking with her dog, Zoe, or cooking a meal for her family and friends. 
-              </p>
-              <p class="end">
-                  Madison is currently available for freelance work.
+                Coming soon. In the meantime, <a href="./contact.html" class="link">get in touch.</a>
               </p>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
@@ -77,28 +62,28 @@
       </section>
 
         <div>
-            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-              <div class="col-med-4 d-flex align-items-center">
-                <a href="#" class="mb-3 me-2 mb-md-0 text-muted text-direction-non lh-1">
-                  <h5 id="footerInitials">MP</h5>
-                </a>
-                <span class="mb-3 mb-md-0 text-muted"><h6>Copyright &copy 2023</h6></span>
-              </div>
-              <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                <li class="ms-3">
-                    <a class="text-muted" href="mailto:madisonporterdesign@gmail.com"> <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
-                        <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
-                        </svg>
-                    </a>
-                </li>
-                <li class="ms-3">
-                    <a class="text-muted" href="https://www.linkedin.com/in/madison-porter-06711074/"> <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
-                        <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
-                        </svg> 
-                    </a>
-                </li>
-              </ul>
-            </footer>
+          <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <div class="col-med-4 d-flex align-items-center">
+              <a href="#" class="mb-3 me-2 mb-md-0 text-muted text-direction-non lh-1">
+                <h5 id="footerInitials">MP</h5>
+              </a>
+              <span class="mb-3 mb-md-0 text-muted"><h6>Copyright &copy 2023</h6></span>
+            </div>
+            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+              <li class="ms-3">
+                  <a class="text-muted" href="mailto:madisonporterdesign@gmail.com"> <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                      <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
+                      </svg>
+                  </a>
+              </li>
+              <li class="ms-3">
+                  <a class="text-muted" href="https://www.linkedin.com/in/madison-porter-06711074/"> <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                      <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+                      </svg> 
+                  </a>
+              </li>
+            </ul>
+          </footer>
           </div>
   
     </body>
