add harambee case study

--- a/index.html
+++ b/index.html
@@ -76,6 +76,23 @@
             </div>
         </section>
          
+        <section class="project">
+          <div class="projectTitle container col-12">            
+              <div class="col-lg-6 col-md-6 col-sm-12">
+            
+              </div>
+              <div class="card col-lg-6 col-md-6 col-sm-12">
+                <img src="./images/harambee.svg" class="card-img-top" alt="">
+                <div class="card-body">
+                  <h5 class="card-title">Harambee Centre</h5>
+                  <p class="card-text">Website Usability Review</p>
+                  <a href="./harambee-centre.html">
+                    <span class="text-1xl font-bold leading-2 tracking-tight text-primary-600 hover:text-primary-800 dark:text-primary-300 dark:hover:text-primary-100">View project →</span>
+                  </a>
+                </div>
+              </div>
+          </div>
+        </section>
 
         <section class="project">
           <div class="projectTitle container col-12">            
@@ -93,7 +110,7 @@
                 </div>
               </div>
           </div>
-      </section>
+        </section>
 
         <div>   
             <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
