update about me section

--- a/about.html
+++ b/about.html
@@ -52,7 +52,19 @@
           <div class="container col-12">
             <div class="bio col-lg-6 col-md-6 col-sm-12">
               <p>
-                Coming soon. In the meantime, <a href="./contact.html" class="link">get in touch.</a>
+                Madison is a user experience designer based in (but not limited to) Coeur d'Alene, Idaho. She has a background in professional services where she leveraged strong communication, team collaboration, critical thinking and analytical skills to serve clients in various industries such as energy, consumer and industrial products, life sciences, and real estate. 
+              </p>
+              <p>
+                Leaning into her creative side, Madison completed a UX/UI Design Bootcamp where she expanded her skill set into many areas of the design process including user research, prototyping, interface design, and front-end development. 
+              </p>
+              <p>
+                As a designer, Madison loves clean lines and simple designs. She enjoys using her creativity and problem-solving skills to create digital experiences that are not only beautiful, but function intuitively for users. 
+              </p>
+              <p>
+                Madison is committed to personal growth and is always looking for new ways to challenge and improve herself, whether that's taking a course or reading a book. In her spare time, she can be found reading (or <a class="link" href="https://www.amazon.com/Zoes-Big-Adventure-Madison-Porter/dp/B0C2S4MYF1">writing</a>) a good book, hiking with her dog and husband, or cooking a meal for her family and friends. 
+              </p>
+              <p>
+                Madison specializes in usability and accessibility reviews, as well as website redesigns, and is currently available for freelance work. 
               </p>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
