--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
 
         <section>
             <div class="container jumbotron">
-                <div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
                     <h1 class="display-4">User <em>experience</em></h1>
                     <h1 class="display-4">designer based in</h1>
                     <h1 class="end display-4"><em>Coeur d'Alene, Idaho</em></h1>
+                    <h2 class="end">
+                      Solving problems with beautiful, user-centric web products.
+                    </h2>
                 </div>
             </div>
             
@@ -59,14 +62,14 @@
         <section class="project">
             <div class="projectTitle container col-12">            
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h2 class="sectionTitle">
+                    <h3 class="sectionTitle">
                         Recent Work
-                    </h2>
+                    </h3>
                 </div>
                 <div class="card col-lg-6 col-md-6 col-sm-12">
                   <img src="./images/abundo.svg" class="card-img-top" alt="">
                   <div class="card-body">
-                    <h5 class="card-title">Abundo Wealth</h5>
+                    <h4 class="card-title">Abundo Wealth</h4>
                     <p class="card-text">YouVest Website Application Design</p>
                     <a href="./abundo-wealth.html">
                       <span class="text-1xl font-bold leading-2 tracking-tight text-primary-600 hover:text-primary-800 dark:text-primary-300 dark:hover:text-primary-100">View project →</span>
@@ -84,7 +87,7 @@
               <div class="card col-lg-6 col-md-6 col-sm-12">
                 <img src="./images/harambee.svg" class="card-img-top" alt="">
                 <div class="card-body">
-                  <h5 class="card-title">Harambee Centre</h5>
+                  <h4 class="card-title">Harambee Centre</h4>
                   <p class="card-text">Website Usability Review</p>
                   <a href="./harambee-centre.html">
                     <span class="text-1xl font-bold leading-2 tracking-tight text-primary-600 hover:text-primary-800 dark:text-primary-300 dark:hover:text-primary-100">View project →</span>
@@ -102,7 +105,7 @@
               <div class="card col-lg-6 col-md-6 col-sm-12">
                 <img src="./images/salt.svg" class="card-img-top" alt="">
                 <div class="card-body">
-                  <h5 class="card-title">Salt of the Earth Skin</h5>
+                  <h4 class="card-title">Salt of the Earth Skin</h4>
                   <p class="card-text">Website Usability Review</p>
                   <a href="./salt-of-the-earth-skin.html">
                     <span class="text-1xl font-bold leading-2 tracking-tight text-primary-600 hover:text-primary-800 dark:text-primary-300 dark:hover:text-primary-100">View project →</span>
