update about me

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                 Madison is committed to personal growth and is always looking for new ways to challenge and improve herself, whether that's taking a course or reading a book. In her spare time, she can be found reading (or <a class="link" href="https://www.amazon.com/Zoes-Big-Adventure-Madison-Porter/dp/B0C2S4MYF1">writing</a>) a good book, hiking with her dog and husband, or cooking a meal for her family and friends. 
               </p>
               <p>
-                Madison specializes in usability and accessibility reviews, as well as website redesigns, and is currently available for freelance work. 
+                Madison specializes in website usability and accessibility reviews, as well as website design, and is currently available for freelance work. 
               </p>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
