--- a/about.html
+++ b/about.html
@@ -77,9 +77,9 @@
           <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-med-4 d-flex align-items-center">
               <a href="#" class="mb-3 me-2 mb-md-0 text-muted text-direction-non lh-1">
-                <h5 id="footerInitials">MP</h5>
+                <p id="footerInitials">MP</p>
               </a>
-              <span class="mb-3 mb-md-0 text-muted"><h6>Copyright &copy 2023</h6></span>
+              <span class="mb-3 mb-md-0 text-muted">Copyright &copy 2023</span>
             </div>
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
               <li class="ms-3">
