--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <section>
             <div class="container jumbotron">
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h1 class="display-4">User <em>experience</em></h1>
+                    <h1 class="display-4">User experience</h1>
                     <h1 class="display-4">designer based in</h1>
-                    <h1 class="end display-4"><em>Coeur d'Alene, Idaho</em></h1>
+                    <h1 class="end display-4">Coeur d'Alene, Idaho</h1>
                     <h2 class="end">
                       Solving problems with beautiful, user-centric web products.
                     </h2>
