--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="card-body">
                   <h4 class="card-title">Harambee Centre</h4>
                   <p class="card-text">Website Usability Review</p>
-                  <a href="./files/Harambee.pdf">
+                  <a href="./harambee-centre.html">
                     <span class="text-1xl font-bold leading-2 tracking-tight text-primary-600 hover:text-primary-800 dark:text-primary-300 dark:hover:text-primary-100">View project →</span>
                   </a>
                 </div>
